--- a/templates/liff.html
+++ b/templates/liff.html
@@ -170,15 +170,15 @@
                                             "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ"
                                         },
                                         "style": "secondary",
-                                        "color": "#5FBBAC"
+                                        "color": "#B5EAEF"
                                     }, {
                                         "type": "button",
                                         "style": "secondary",
                                         "margin": "lg",
-                                        "color": "#5FBBAC",
+                                        "color": "#B5EAEF",
                                         "action": {
                                             "type": "postback",
-                                            "label": "action",
+                                            "label": "Maso",
                                             "data": "hello"
                                         }
                                     }]
@@ -206,26 +206,7 @@
                                 }, {
                                     "type": "box",
                                     "layout": "vertical",
-                                    "contents": [{
-                                        "type": "button",
-                                        "action": {
-                                            "type": "uri",
-                                            "label": "action",
-                                            "uri": "http://linecorp.com/"
-                                        },
-                                        "style": "secondary",
-                                        "color": "#5FBBAC"
-                                    }, {
-                                        "type": "button",
-                                        "action": {
-                                            "type": "uri",
-                                            "label": "action",
-                                            "uri": "http://linecorp.com/"
-                                        },
-                                        "style": "secondary",
-                                        "margin": "lg",
-                                        "color": "#5FBBAC"
-                                    }]
+                                    "contents": []
                                 }]
                             }
                         }]
