--- a/templates/liff.html
+++ b/templates/liff.html
@@ -196,7 +196,16 @@
                                 }, {
                                     "type": "box",
                                     "layout": "vertical",
-                                    "contents": []
+                                    "contents": [{
+                                        "type": "button",
+                                        "action": {
+                                            "type": "uri",
+                                            "label": "❖訂閱Maso的萬事屋",
+                                            "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1"
+                                        },
+                                        "style": "secondary",
+                                        "color": "#B5EAEF"
+                                    }]
                                 }]
                             }
                         }]
