--- a/templates/liff.html
+++ b/templates/liff.html
@@ -200,6 +200,13 @@
                                         "type": "button",
                                         "action": {
                                             "type": "uri",
+                                            "label": "❖加入Maso好友",
+                                            "uri": "https://line.me/ti/p/KeRocPY6PP"
+                                        }
+                                    }, {
+                                        "type": "button",
+                                        "action": {
+                                            "type": "uri",
                                             "label": "❖訂閱Maso的萬事屋",
                                             "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1"
                                         },
