--- a/templates/liff.html
+++ b/templates/liff.html
@@ -171,6 +171,13 @@
                                         },
                                         "style": "secondary",
                                         "color": "#B5EAEF"
+                                    }, {
+                                        "type": "button",
+                                        "action": {
+                                            "type": "postback",
+                                            "label": "❖Maso",
+                                            "data": "hello"
+                                        }
                                     }]
                                 }]
                             }
@@ -202,7 +209,9 @@
                                             "type": "uri",
                                             "label": "❖加入Maso好友",
                                             "uri": "https://line.me/ti/p/KeRocPY6PP"
-                                        }
+                                        },
+                                        "color": "#B5EAEF",
+                                        "style": "secondary"
                                     }, {
                                         "type": "button",
                                         "action": {
