--- a/templates/liff.html
+++ b/templates/liff.html
@@ -175,8 +175,8 @@
                                         "type": "button",
                                         "action": {
                                             "type": "postback",
-                                            "label": "❖Maso",
-                                            "data": "hello"
+                                            "label": "Maso的工作坊",
+                                            "data": "Maso的工作坊"
                                         }
                                     }]
                                 }]
