--- a/templates/liff.html
+++ b/templates/liff.html
@@ -171,6 +171,14 @@
                                         },
                                         "style": "secondary",
                                         "color": "#B5EAEF"
+                                    }, {
+                                        "type": "button",
+                                        "action": {
+                                            "type": "message",
+                                            "label": "❖Maso的工作坊",
+                                            "text": "Maso的工作坊，目前正在建置當中，敬請期待"
+                                        },
+                                        "margin": "lg"
                                     }]
                                 }]
                             }
@@ -213,7 +221,8 @@
                                             "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1"
                                         },
                                         "style": "secondary",
-                                        "color": "#B5EAEF"
+                                        "color": "#B5EAEF",
+                                        "margin": "lg"
                                     }]
                                 }]
                             }
