--- a/templates/liff.html
+++ b/templates/liff.html
@@ -158,7 +158,9 @@
                                         "type": "text",
                                         "text": "◈ 我發現了一把鏟子\n\n某天，因為朋友在LINE群組中加入了一個聊天機器人，原本只是想要搜尋還有哪些聊天機器人好用的我，卻意外地發現了一些如何製作聊天機器人的教學文章。\n\n在懵懵懂懂的情況下，我發現了這把名為程式尋寶的鏟子，從那時候起我開啟了這趟發掘可能性的旅程…\n\n",
                                         "wrap": true
-                                    }]
+                                    }],
+                                    "height": "280px",
+                                    "maxHeight": "400px"
                                 }, {
                                     "type": "box",
                                     "layout": "vertical",
@@ -190,9 +192,11 @@
                                     "layout": "vertical",
                                     "contents": [{
                                         "type": "text",
-                                        "text": "◈ 坑越挖越大洞啦\n\n沒錯，踏上這條不歸路的人們都懂得，手上的這把鏟子是一個會讓你深陷越大越大的坑洞之中，沒有終止的一天的可怕工具，但在我回過神來的時候，才發現自己已癡迷於探索它所帶來的無限知識寶藏，你可以說我是個打字的，也可以說我是個挖坑的，坑都挖好了，準備好要一起跳進去了嗎？(Y/N)\n\n",
+                                        "text": "◈ 坑越挖越大洞啦\n\n沒錯，踏上這條不歸路的人們都懂得，手上的這把鏟子是一個會讓你深陷越大越大的坑洞之中，沒有終止的一天的可怕工具，但在我回過神來的時候，才發現自己已癡迷於探索它所帶來的無限知識寶藏，你可以說我是個打字的，也可以說我是個挖坑的，坑都挖好了，準備好要一起跳進去了嗎？\n\n",
                                         "wrap": true
-                                    }]
+                                    }],
+                                    "height": "280px",
+                                    "maxHeight": "400px"
                                 }, {
                                     "type": "box",
                                     "layout": "vertical",
@@ -204,8 +208,7 @@
                                             "uri": "https://www.youtube.com/channel/UCpzVAEwEs9AwT2uAOZuxaRQ?sub_confirmation=1"
                                         },
                                         "style": "secondary",
-                                        "color": "#B5EAEF",
-                                        "margin": "lg"
+                                        "color": "#B5EAEF"
                                     }]
                                 }]
                             }
