--- a/templates/liff.html
+++ b/templates/liff.html
@@ -12,7 +12,7 @@
         //==========================LIFF API初始化================================
         $(document).ready(function() {
             liff.init({
-                liffId: "1657051799-oEqeJl0a"
+                liffId: "你的LIFF_ID"
             });
         });
         //==========================LIFF API初始化================================
